actions: remove unused GtkActions

We can now remove all the GtkActions that were only used as a proxy
towards the GAction, since we don't expose them anywhere in the UI.

NAUTILUS_ACTION_EDIT_BOOKMARKS is still used for media keys, so keep it
for now.

https://bugzilla.gnome.org/show_bug.cgi?id=735488